oxiplate-derive/tests/broken/derive/colon-and-string.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/colon-and-string.rs:4:19
  |
4 | #[oxiplate_inline(:"")]
  |                   ^

error: expected an expression
 --> tests/broken/derive/colon-and-string.rs:4:19
  |
4 | #[oxiplate_inline(:"")]
  |                   ^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/broken/derive/colon-and-string.rs:5:13
  |
5 | struct Data;
  |             ^ consider adding a `main` function to `$DIR/tests/broken/derive/colon-and-string.rs`
